--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "1aa5cc70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High precision value: 12345.123456789123456789\n",
+      "                      Value\n",
+      "0  12345.123456789123456789\n",
+      "1  98765.987654321987654321\n",
+      "Formatted value: 12345.123456789123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data for spocdf\n",
+    "spocdf = pd.DataFrame({\n",
+    "    'PSID': [101, 101, 102, 103, 103, 103],\n",
+    "    'category': ['new', 'new', 'new', 'new', 'new', 'new'],\n",
+    "    'Remarks': ['', '', 'Filled', '', '', ''],\n",
+    "    'No. of FTE': [0.5, 0.6, 0.5, 0.3, 0.5, 0.3]\n",
+    "})\n",
+    "\n",
+    "# Identify duplicate rows (excluding 'Remarks' column for checking duplicates)\n",
+    "duplicates = spocdf[spocdf.duplicated(subset=['PSID', 'category', 'No. of FTE'], keep=False)]\n",
+    "\n",
+    "# Filter duplicates where 'Remarks' is blank\n",
+    "duplicates_no_remarks = duplicates[duplicates['Remarks'] == '']\n",
+    "\n",
+    "# Group by 'PSID' and check if the sum of 'No. of FTE' exceeds 1\n",
+    "to_delete = duplicates_no_remarks.groupby('PSID').filter(lambda x: x['No. of FTE'].sum() > 1)\n",
+    "\n",
+    "# Keep one row and mark the rest as to be deleted\n",
+    "deleted_df = to_delete.drop_duplicates(subset=['PSID'], keep='first')\n",
+    "rows_to_remove = to_delete[~to_delete.index.isin(deleted_df.index)]\n",
+    "\n",
+    "# Drop the duplicated rows from spocdf and keep only one instance\n",
+    "spocdf_cleaned = spocdf.drop(rows_to_remove.index)\n",
+    "\n",
+    "# Save deleted rows to Excel if any exist\n",
+    "if not rows_to_remove.empty:\n",
+    "    with pd.ExcelWriter('output.xlsx', engine='openpyxl') as writer:\n",
+    "        rows_to_remove.to_excel(writer, sheet_name='Deleted data', index=False)\n",
+    "        spocdf_cleaned.to_excel(writer, sheet_name='Cleaned spocdf', index=False)\n",
+    "\n",
+    "print(\"Cleaned spocdf:\")\n",
+    "print(spocdf_cleaned)\n",
+    "print(\"\\nDeleted DataFrame:\")\n",
+    "print(rows_to_remove)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "685ec183",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A2    C             SC\n",
+      "0  101  new  lookup_value1\n",
+      "1  102  old         value2\n",
+      "2  103  new  lookup_value3\n",
+      "3  104  old         value4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample DataFrames\n",
+    "df1 = pd.DataFrame({\n",
+    "    'A2': [101, 102, 103, 104],\n",
+    "    'C': ['new', 'old', 'new', 'old'],\n",
+    "    'SC': [None, 'value2', None, 'value4']\n",
+    "})\n",
+    "\n",
+    "df2 = pd.DataFrame({\n",
+    "    'AA2': [101, 102, 103, 104],\n",
+    "    'SC': ['lookup_value1', 'lookup_value2', 'lookup_value3', 'lookup_value4']\n",
+    "})\n",
+    "\n",
+    "# Step 1: Create a mask for rows where 'C' is 'new' and 'SC' is blank (None or NaN)\n",
+    "mask = (df1['C'] == 'new') & (df1['SC'].isna())\n",
+    "\n",
+    "# Step 2: Create a lookup dictionary from df2 for easy access\n",
+    "lookup_dict = df2.set_index('AA2')['SC'].to_dict()\n",
+    "\n",
+    "# Step 3: Use np.where() to update 'SC' column conditionally\n",
+    "df1['SC'] = np.where(\n",
+    "    mask,  # Only update where the condition is True\n",
+    "    df1['A2'].map(lookup_dict).fillna(df1['SC']),  # Map A2 to the lookup dict and fill NaN with existing SC\n",
+    "    df1['SC']  # Retain the existing SC values\n",
+    ")\n",
+    "\n",
+    "# Output the updated df1\n",
+    "print(df1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b60536d8",
    "metadata": {},
@@ -68,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab114c0c",
+   "id": "1c87da5e",
    "metadata": {},
    "outputs": [
     {
@@ -93,65 +201,62 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
+    "from datetime import datetime\n",
     "\n",
-    "# Example list of Employee IDs\n",
-    "employee_ids = ['E001', 'E002', 'E003']  # This will be loaded from a dataframe\n",
+    "# Function to generate columns for all months of the year\n",
+    "def generate_monthly_columns(year_suffix, num_years=1):\n",
+    "    months = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "    columns = []\n",
+    "    \n",
+    "    for i in range(num_years):\n",
+    "        for month in months:\n",
+    "            columns.append(f\"{month} {year_suffix + i}\")\n",
+    "    \n",
+    "    return columns\n",
     "\n",
-    "# Create a DataFrame with Employee IDs and 24 columns for months from 'Jan 24' to 'Dec 25'\n",
-    "columns = [\n",
-    "    'Jan 24', 'Feb 24', 'Mar 24', 'Apr 24', 'May 24', 'Jun 24', 'Jul 24', 'Aug 24', 'Sep 24', 'Oct 24', 'Nov 24', 'Dec 24',\n",
-    "    'Jan 25', 'Feb 25', 'Mar 25', 'Apr 25', 'May 25', 'Jun 25', 'Jul 25', 'Aug 25', 'Sep 25', 'Oct 25', 'Nov 25', 'Dec 25'\n",
-    "]\n",
-    "\n",
-    "df = pd.DataFrame(employee_ids, columns=['Employee ID'])\n",
-    "for col in columns:\n",
-    "    df[col] = 0  # Initialize all values to 0 (neutral, meaning no info yet)\n",
-    "\n",
-    "# Function to check employee presence in each monthly file\n",
-    "def check_employee_presence(df, month_files):\n",
-    "    for month, file_path in month_files.items():\n",
-    "        # Read the month file (assuming it's a CSV file or similar, replace with correct method if different format)\n",
-    "        month_data = pd.read_csv(file_path)  # Assuming each file contains 'Employee ID' column\n",
+    "# Function to update dataframe with monthly data from files\n",
+    "def update_monthly_data(df, folder_path, year_suffix):\n",
+    "    months = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "    current_month = datetime.now().month  # Get the current month (1-12)\n",
+    "    \n",
+    "    for month_idx in range(current_month):\n",
+    "        month_name = months[month_idx]  # Get month name\n",
+    "        col_name = f\"{month_name} {year_suffix}\"  # Column name to update\n",
     "        \n",
-    "        # Get list of employee IDs present in this month's file\n",
-    "        present_ids = month_data['Employee ID'].unique()\n",
+    "        # Read corresponding file for the current month if exists\n",
+    "        file_path = os.path.join(folder_path, f\"{month_name}_{year_suffix}.csv\")  # Assuming CSV format\n",
     "        \n",
-    "        # Update the df for each Employee ID, +1 if found, -1 if not found\n",
-    "        df[month] = df['Employee ID'].apply(lambda x: 1 if x in present_ids else -1)\n",
+    "        if os.path.exists(file_path):\n",
+    "            monthly_data = pd.read_csv(file_path)  # Adjust if files are in Excel\n",
+    "            \n",
+    "            # Assuming you have a common column like 'Position ID' to merge data\n",
+    "            if 'Position ID' in monthly_data.columns:\n",
+    "                # Merge or update existing data based on 'Position ID'\n",
+    "                df = df.merge(monthly_data[['Position ID', 'Value']], on='Position ID', how='left')\n",
+    "                \n",
+    "                # Assign merged 'Value' to the corresponding column (e.g., \"Jan 24\")\n",
+    "                df[col_name] = df['Value']\n",
+    "                df = df.drop(columns=['Value'])  # Remove the temporary 'Value' column\n",
+    "    \n",
+    "    return df\n",
     "\n",
-    "# Dictionary of files for each month (replace with actual file paths)\n",
-    "month_files = {\n",
-    "    'Jan 24': 'jan_2024_data.csv',\n",
-    "    'Feb 24': 'feb_2024_data.csv',\n",
-    "    'Mar 24': 'mar_2024_data.csv',\n",
-    "    'Apr 24': 'apr_2024_data.csv',\n",
-    "    'May 24': 'may_2024_data.csv',\n",
-    "    'Jun 24': 'jun_2024_data.csv',\n",
-    "    'Jul 24': 'jul_2024_data.csv',\n",
-    "    'Aug 24': 'aug_2024_data.csv',\n",
-    "    'Sep 24': 'sep_2024_data.csv',\n",
-    "    'Oct 24': 'oct_2024_data.csv',\n",
-    "    'Nov 24': 'nov_2024_data.csv',\n",
-    "    'Dec 24': 'dec_2024_data.csv',\n",
-    "    'Jan 25': 'jan_2025_data.csv',\n",
-    "    'Feb 25': 'feb_2025_data.csv',\n",
-    "    'Mar 25': 'mar_2025_data.csv',\n",
-    "    'Apr 25': 'apr_2025_data.csv',\n",
-    "    'May 25': 'may_2025_data.csv',\n",
-    "    'Jun 25': 'jun_2025_data.csv',\n",
-    "    'Jul 25': 'jul_2025_data.csv',\n",
-    "    'Aug 25': 'aug_2025_data.csv',\n",
-    "    'Sep 25': 'sep_2025_data.csv',\n",
-    "    'Oct 25': 'oct_2025_data.csv',\n",
-    "    'Nov 25': 'nov_2025_data.csv',\n",
-    "    'Dec 25': 'dec_2025_data.csv'\n",
-    "}\n",
+    "# Step 1: Generate columns for one year\n",
+    "columns_2024 = generate_monthly_columns(24)\n",
     "\n",
-    "# Call the function to update the DataFrame based on the presence in each monthly file\n",
-    "check_employee_presence(df, month_files)\n",
+    "# Step 2: Create an empty dataframe with 'Position ID' and the generated columns\n",
+    "df = pd.DataFrame(columns=['Position ID'] + columns_2024)\n",
     "\n",
-    "# Output the final DataFrame\n",
-    "print(df)\n"
+    "# Step 3: Simulate loading data from previous step (e.g., from GHA)\n",
+    "# Assuming 'Position ID' column is already there\n",
+    "# df = pd.read_csv('previous_step_data.csv')  # Or however you load it\n",
+    "\n",
+    "# Step 4: Update DataFrame with monthly data up to the current month\n",
+    "folder_path = 'path_to_your_files'  # Specify the folder where monthly files are stored\n",
+    "df = update_monthly_data(df, folder_path, 24)\n",
+    "\n",
+    "# Step 5: Save the final updated DataFrame to Excel or CSV\n",
+    "df.to_csv('final_output.csv', index=False)  # Adjust for Excel if needed\n"
    ]
   },
   {
