--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1aa5cc70",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High precision value: 12345.123456789123456789\n",
-      "                      Value\n",
-      "0  12345.123456789123456789\n",
-      "1  98765.987654321987654321\n",
-      "Formatted value: 12345.123456789123456789\n"
+      "Cleaned spocdf:\n",
+      "   PSID category Remarks  No. of FTE\n",
+      "0   101      new                 0.5\n",
+      "2   102      new  Filled         0.5\n",
+      "3   103      new                 0.3\n",
+      "\n",
+      "Deleted DataFrame:\n",
+      "   PSID category Remarks  No. of FTE\n",
+      "1   101      new                 0.6\n",
+      "4   103      new                 0.5\n",
+      "5   103      new                 0.3\n"
      ]
     }
    ],
@@ -29,32 +35,37 @@
     "    'No. of FTE': [0.5, 0.6, 0.5, 0.3, 0.5, 0.3]\n",
     "})\n",
     "\n",
-    "# Identify duplicate rows (excluding 'Remarks' column for checking duplicates)\n",
-    "duplicates = spocdf[spocdf.duplicated(subset=['PSID', 'category', 'No. of FTE'], keep=False)]\n",
+    "# Step 1: Group by 'PSID' and filter based on the conditions\n",
+    "# We are looking for groups where category is 'new', Remarks is blank, and the sum of 'No. of FTE' > 1\n",
+    "groups = spocdf.groupby('PSID')\n",
+    "psid_to_remove = []\n",
     "\n",
-    "# Filter duplicates where 'Remarks' is blank\n",
-    "duplicates_no_remarks = duplicates[duplicates['Remarks'] == '']\n",
+    "# Identify PSIDs that meet the conditions\n",
+    "for psid, group in groups:\n",
+    "    if group['category'].eq('new').all() and group['Remarks'].eq('').all() and group['No. of FTE'].sum() > 1:\n",
+    "        psid_to_remove.append(psid)\n",
     "\n",
-    "# Group by 'PSID' and check if the sum of 'No. of FTE' exceeds 1\n",
-    "to_delete = duplicates_no_remarks.groupby('PSID').filter(lambda x: x['No. of FTE'].sum() > 1)\n",
+    "# Step 2: Separate rows to delete and rows to keep based on identified PSIDs\n",
+    "# Filter for rows to delete based on PSID\n",
+    "to_delete = spocdf[spocdf['PSID'].isin(psid_to_remove) & spocdf['Remarks'].eq('')]\n",
     "\n",
-    "# Keep one row and mark the rest as to be deleted\n",
-    "deleted_df = to_delete.drop_duplicates(subset=['PSID'], keep='first')\n",
-    "rows_to_remove = to_delete[~to_delete.index.isin(deleted_df.index)]\n",
+    "# Keep only the first occurrence per PSID and mark the others for deletion\n",
+    "to_keep = to_delete.drop_duplicates(subset=['PSID'], keep='first')\n",
+    "deleted_rows = to_delete[~to_delete.index.isin(to_keep.index)]\n",
     "\n",
-    "# Drop the duplicated rows from spocdf and keep only one instance\n",
-    "spocdf_cleaned = spocdf.drop(rows_to_remove.index)\n",
+    "# Step 3: Create cleaned DataFrame by removing duplicated rows from spocdf\n",
+    "spocdf_cleaned = spocdf.drop(deleted_rows.index)\n",
     "\n",
-    "# Save deleted rows to Excel if any exist\n",
-    "if not rows_to_remove.empty:\n",
+    "# Step 4: Write to Excel if there are rows to delete\n",
+    "if not deleted_rows.empty:\n",
     "    with pd.ExcelWriter('output.xlsx', engine='openpyxl') as writer:\n",
-    "        rows_to_remove.to_excel(writer, sheet_name='Deleted data', index=False)\n",
+    "        deleted_rows.to_excel(writer, sheet_name='Deleted data', index=False)\n",
     "        spocdf_cleaned.to_excel(writer, sheet_name='Cleaned spocdf', index=False)\n",
     "\n",
     "print(\"Cleaned spocdf:\")\n",
     "print(spocdf_cleaned)\n",
     "print(\"\\nDeleted DataFrame:\")\n",
-    "print(rows_to_remove)\n"
+    "print(deleted_rows)\n"
    ]
   },
   {
