--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "1aa5cc70",
    "metadata": {},
    "outputs": [
@@ -11,16 +11,16 @@
      "output_type": "stream",
      "text": [
       "Cleaned spocdf:\n",
-      "   PSID category Remarks  No. of FTE\n",
-      "0   101      new                 0.5\n",
-      "2   102      new  Filled         0.5\n",
-      "3   103      new                 0.3\n",
+      "   PSID category Remarks  No. of FTE  Col1 Col2\n",
+      "0   101      new                 0.5     1    A\n",
+      "2   102      old  Filled         0.5     2    B\n",
+      "3   103      new                 0.3     3    C\n",
+      "4   103      old                 0.5     3    C\n",
       "\n",
       "Deleted DataFrame:\n",
-      "   PSID category Remarks  No. of FTE\n",
-      "1   101      new                 0.6\n",
-      "4   103      new                 0.5\n",
-      "5   103      new                 0.3\n"
+      "   PSID category Remarks  No. of FTE  Col1 Col2\n",
+      "1   101      new                 0.6     1    A\n",
+      "5   103      old                 0.3     3    C\n"
      ]
     }
    ],
@@ -30,38 +30,48 @@
     "# Sample data for spocdf\n",
     "spocdf = pd.DataFrame({\n",
     "    'PSID': [101, 101, 102, 103, 103, 103],\n",
-    "    'category': ['new', 'new', 'new', 'new', 'new', 'new'],\n",
+    "    'category': ['new', 'new', 'old', 'new', 'old', 'old'],\n",
     "    'Remarks': ['', '', 'Filled', '', '', ''],\n",
-    "    'No. of FTE': [0.5, 0.6, 0.5, 0.3, 0.5, 0.3]\n",
+    "    'No. of FTE': [0.5, 0.6, 0.5, 0.3, 0.5, 0.3],\n",
+    "    'Col1': [1, 1, 2, 3, 3, 3],\n",
+    "    'Col2': ['A', 'A', 'B', 'C', 'C', 'C']\n",
+    "    # Add more columns as needed\n",
     "})\n",
     "\n",
-    "# Step 1: Group by 'PSID' and filter based on the conditions\n",
-    "# We are looking for groups where category is 'new', Remarks is blank, and the sum of 'No. of FTE' > 1\n",
-    "groups = spocdf.groupby('PSID')\n",
-    "psid_to_remove = []\n",
+    "# Step 1: Filter out rows where Remarks is blank\n",
+    "blank_remarks = spocdf[spocdf['Remarks'] == '']\n",
     "\n",
-    "# Identify PSIDs that meet the conditions\n",
-    "for psid, group in groups:\n",
-    "    if group['category'].eq('new').all() and group['Remarks'].eq('').all() and group['No. of FTE'].sum() > 1:\n",
-    "        psid_to_remove.append(psid)\n",
+    "# Step 2: Sum 'No. of FTE' for each PSID group\n",
+    "fte_sum = blank_remarks.groupby('PSID')['No. of FTE'].sum()\n",
     "\n",
-    "# Step 2: Separate rows to delete and rows to keep based on identified PSIDs\n",
-    "# Filter for rows to delete based on PSID\n",
-    "to_delete = spocdf[spocdf['PSID'].isin(psid_to_remove) & spocdf['Remarks'].eq('')]\n",
+    "# Step 3: Identify PSIDs where the sum of 'No. of FTE' exceeds 1\n",
+    "psid_to_check = fte_sum[fte_sum > 1].index\n",
     "\n",
-    "# Keep only the first occurrence per PSID and mark the others for deletion\n",
-    "to_keep = to_delete.drop_duplicates(subset=['PSID'], keep='first')\n",
-    "deleted_rows = to_delete[~to_delete.index.isin(to_keep.index)]\n",
+    "# Step 4: Filter out rows where PSID is in the PSID group that needs to be checked\n",
+    "to_check = blank_remarks[blank_remarks['PSID'].isin(psid_to_check)]\n",
     "\n",
-    "# Step 3: Create cleaned DataFrame by removing duplicated rows from spocdf\n",
+    "# Step 5: Identify duplicates based on all columns except 'Remarks' and 'No. of FTE'\n",
+    "columns_to_check = [col for col in spocdf.columns if col not in ['Remarks', 'No. of FTE']]\n",
+    "\n",
+    "# Find duplicate rows based on the selected columns\n",
+    "duplicated_rows = to_check[to_check.duplicated(subset=columns_to_check, keep=False)]\n",
+    "\n",
+    "# Step 6: Keep only the first occurrence and remove the others\n",
+    "rows_to_keep = duplicated_rows.drop_duplicates(subset=columns_to_check, keep='first')\n",
+    "\n",
+    "# Step 7: Identify the rows to delete (those not kept)\n",
+    "deleted_rows = duplicated_rows[~duplicated_rows.index.isin(rows_to_keep.index)]\n",
+    "\n",
+    "# Step 8: Clean the original DataFrame by removing the deleted rows\n",
     "spocdf_cleaned = spocdf.drop(deleted_rows.index)\n",
     "\n",
-    "# Step 4: Write to Excel if there are rows to delete\n",
-    "if not deleted_rows.empty:\n",
-    "    with pd.ExcelWriter('output.xlsx', engine='openpyxl') as writer:\n",
-    "        deleted_rows.to_excel(writer, sheet_name='Deleted data', index=False)\n",
-    "        spocdf_cleaned.to_excel(writer, sheet_name='Cleaned spocdf', index=False)\n",
+    "# # Step 9: Write to Excel if there are rows to delete\n",
+    "# with pd.ExcelWriter('output.xlsx', engine='openpyxl') as writer:\n",
+    "#     if not deleted_rows.empty:\n",
+    "#         deleted_rows.to_excel(writer, sheet_name='Deleted data', index=False)\n",
+    "#     spocdf_cleaned.to_excel(writer, sheet_name='Cleaned spocdf', index=False)\n",
     "\n",
+    "# Print the results\n",
     "print(\"Cleaned spocdf:\")\n",
     "print(spocdf_cleaned)\n",
     "print(\"\\nDeleted DataFrame:\")\n",
@@ -70,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "685ec183",
    "metadata": {},
    "outputs": [
