--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -26,56 +26,35 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "# Sample data for spocdf\n",
-    "spocdf = pd.DataFrame({\n",
-    "    'PSID': [101, 101, 102, 103, 103, 103],\n",
-    "    'category': ['new', 'new', 'old', 'new', 'old', 'old'],\n",
-    "    'Remarks': ['', '', 'Filled', '', '', ''],\n",
-    "    'No. of FTE': [0.5, 0.6, 0.5, 0.3, 0.5, 0.3],\n",
-    "    'Col1': [1, 1, 2, 3, 3, 3],\n",
-    "    'Col2': ['A', 'A', 'B', 'C', 'C', 'C']\n",
-    "    # Add more columns as needed\n",
-    "})\n",
+    "# Load the original workbook and read spocdf (assuming it's from an Excel file)\n",
+    "file_path = 'your_workbook.xlsx'\n",
+    "spocdf = pd.read_excel(file_path, sheet_name='spocdf')\n",
     "\n",
-    "# Step 1: Filter out rows where Remarks is blank\n",
-    "blank_remarks = spocdf[spocdf['Remarks'] == '']\n",
+    "# Step 1: Identify duplicate PSIDs\n",
+    "duplicated_psid_data = spocdf[spocdf.duplicated(subset='PSID', keep=False)]\n",
     "\n",
-    "# Step 2: Sum 'No. of FTE' for each PSID group\n",
-    "fte_sum = blank_remarks.groupby('PSID')['No. of FTE'].sum()\n",
+    "# Step 2: Sort the duplicated rows by PSID\n",
+    "duplicated_psid_data_sorted = duplicated_psid_data.sort_values(by='PSID')\n",
     "\n",
-    "# Step 3: Identify PSIDs where the sum of 'No. of FTE' exceeds 1\n",
-    "psid_to_check = fte_sum[fte_sum > 1].index\n",
+    "# Step 3: Write to a new sheet called 'Review sheet' in the workbook\n",
+    "if not duplicated_psid_data_sorted.empty:\n",
+    "    # Load the workbook\n",
+    "    workbook = load_workbook(file_path)\n",
+    "    \n",
+    "    # Check if 'Review sheet' already exists, delete it if it does\n",
+    "    if 'Review sheet' in workbook.sheetnames:\n",
+    "        del workbook['Review sheet']\n",
+    "    \n",
+    "    # Save the workbook after removing the sheet to apply changes\n",
+    "    workbook.save(file_path)\n",
+    "    \n",
+    "    # Append the new data to the workbook in 'Review sheet'\n",
+    "    with pd.ExcelWriter(file_path, engine='openpyxl', mode='a') as writer:\n",
+    "        duplicated_psid_data_sorted.to_excel(writer, sheet_name='Review sheet', index=False)\n",
     "\n",
-    "# Step 4: Filter out rows where PSID is in the PSID group that needs to be checked\n",
-    "to_check = blank_remarks[blank_remarks['PSID'].isin(psid_to_check)]\n",
-    "\n",
-    "# Step 5: Identify duplicates based on all columns except 'Remarks' and 'No. of FTE'\n",
-    "columns_to_check = [col for col in spocdf.columns if col not in ['Remarks', 'No. of FTE']]\n",
-    "\n",
-    "# Find duplicate rows based on the selected columns\n",
-    "duplicated_rows = to_check[to_check.duplicated(subset=columns_to_check, keep=False)]\n",
-    "\n",
-    "# Step 6: Keep only the first occurrence and remove the others\n",
-    "rows_to_keep = duplicated_rows.drop_duplicates(subset=columns_to_check, keep='first')\n",
-    "\n",
-    "# Step 7: Identify the rows to delete (those not kept)\n",
-    "deleted_rows = duplicated_rows[~duplicated_rows.index.isin(rows_to_keep.index)]\n",
-    "\n",
-    "# Step 8: Clean the original DataFrame by removing the deleted rows\n",
-    "spocdf_cleaned = spocdf.drop(deleted_rows.index)\n",
-    "\n",
-    "# # Step 9: Write to Excel if there are rows to delete\n",
-    "# with pd.ExcelWriter('output.xlsx', engine='openpyxl') as writer:\n",
-    "#     if not deleted_rows.empty:\n",
-    "#         deleted_rows.to_excel(writer, sheet_name='Deleted data', index=False)\n",
-    "#     spocdf_cleaned.to_excel(writer, sheet_name='Cleaned spocdf', index=False)\n",
-    "\n",
-    "# Print the results\n",
-    "print(\"Cleaned spocdf:\")\n",
-    "print(spocdf_cleaned)\n",
-    "print(\"\\nDeleted DataFrame:\")\n",
-    "print(deleted_rows)\n"
+    "print(\"Review sheet with duplicated PSID rows has been created and saved.\")\n"
    ]
   },
   {
