--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "1aa5cc70",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cleaned spocdf:\n",
-      "   PSID category Remarks  No. of FTE  Col1 Col2\n",
-      "0   101      new                 0.5     1    A\n",
-      "2   102      old  Filled         0.5     2    B\n",
-      "3   103      new                 0.3     3    C\n",
-      "4   103      old                 0.5     3    C\n",
-      "\n",
-      "Deleted DataFrame:\n",
-      "   PSID category Remarks  No. of FTE  Col1 Col2\n",
-      "1   101      new                 0.6     1    A\n",
-      "5   103      old                 0.3     3    C\n"
+      "  Billing Contact Name  Billing Contact PS ID  Correct Billing Contact PS ID\n",
+      "0                Alice                    101                            101\n",
+      "1                Alice                    102                            101\n",
+      "2                Alice                    103                            101\n",
+      "Duplicate PSID sheet with duplicate and correct PS ID rows has been created and saved.\n"
      ]
     }
    ],
@@ -28,33 +22,54 @@
     "import pandas as pd\n",
     "from openpyxl import load_workbook\n",
     "\n",
-    "# Load the original workbook and read spocdf (assuming it's from an Excel file)\n",
-    "file_path = 'your_workbook.xlsx'\n",
-    "spocdf = pd.read_excel(file_path, sheet_name='spocdf')\n",
+    "# Sample data for spocdf and olddf (replace these with actual data loading as needed)\n",
+    "# spocdf contains the possibly duplicated Billing Contact data\n",
+    "# olddf contains the correct values for Billing Contact Name and PS ID\n",
     "\n",
-    "# Step 1: Identify duplicate PSIDs\n",
-    "duplicated_psid_data = spocdf[spocdf.duplicated(subset='PSID', keep=False)]\n",
+    "spocdf = pd.DataFrame({\n",
+    "    'Billing Contact Name': ['Alice', 'Alice', 'Bob', 'Alice', 'Charlie', 'Charlie'],\n",
+    "    'Billing Contact PS ID': [101, 102, 201, 103, 301, 301]\n",
+    "})\n",
     "\n",
-    "# Step 2: Sort the duplicated rows by PSID\n",
-    "duplicated_psid_data_sorted = duplicated_psid_data.sort_values(by='PSID')\n",
+    "olddf = pd.DataFrame({\n",
+    "    'Billing Contact Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'Billing Contact PS ID': [101, 201, 301]  # Assuming these are the correct PS IDs\n",
+    "})\n",
     "\n",
-    "# Step 3: Write to a new sheet called 'Review sheet' in the workbook\n",
-    "if not duplicated_psid_data_sorted.empty:\n",
-    "    # Load the workbook\n",
-    "    workbook = load_workbook(file_path)\n",
-    "    \n",
-    "    # Check if 'Review sheet' already exists, delete it if it does\n",
-    "    if 'Review sheet' in workbook.sheetnames:\n",
-    "        del workbook['Review sheet']\n",
-    "    \n",
-    "    # Save the workbook after removing the sheet to apply changes\n",
-    "    workbook.save(file_path)\n",
-    "    \n",
-    "    # Append the new data to the workbook in 'Review sheet'\n",
-    "    with pd.ExcelWriter(file_path, engine='openpyxl', mode='a') as writer:\n",
-    "        duplicated_psid_data_sorted.to_excel(writer, sheet_name='Review sheet', index=False)\n",
+    "# Step 1: Identify rows in spocdf where each Billing Contact Name has more than one unique PS ID\n",
+    "# Find unique counts of 'Billing Contact PS ID' per 'Billing Contact Name'\n",
+    "duplicate_check = spocdf.groupby('Billing Contact Name')['Billing Contact PS ID'].nunique()\n",
+    "duplicate_names = duplicate_check[duplicate_check > 1].index\n",
     "\n",
-    "print(\"Review sheet with duplicated PSID rows has been created and saved.\")\n"
+    "# Filter the spocdf for rows with duplicate Billing Contact Names\n",
+    "duplicate_psid_df = spocdf[spocdf['Billing Contact Name'].isin(duplicate_names)].copy()\n",
+    "\n",
+    "# Step 2: Add the correct 'Billing Contact PS ID' from olddf to duplicate_psid_df\n",
+    "# Merge with olddf to get the correct PS ID, assuming olddf has correct mappings\n",
+    "duplicate_psid_df = duplicate_psid_df.merge(\n",
+    "    olddf[['Billing Contact Name', 'Billing Contact PS ID']],\n",
+    "    on='Billing Contact Name',\n",
+    "    how='left',\n",
+    "    suffixes=('', '_correct')\n",
+    ")\n",
+    "\n",
+    "# Step 3: Rename the merged column to 'Correct Billing Contact PS ID'\n",
+    "duplicate_psid_df.rename(columns={'Billing Contact PS ID_correct': 'Correct Billing Contact PS ID'}, inplace=True)\n",
+    "\n",
+    "# Step 4: Write the DataFrame to a new sheet in the same workbook\n",
+    "# file_path = 'your_workbook.xlsx'  # Replace with your actual file path\n",
+    "# workbook = load_workbook(file_path)\n",
+    "\n",
+    "# Check if 'Duplicate PSID' sheet exists, and delete if it does\n",
+    "# if 'Duplicate PSID' in workbook.sheetnames:\n",
+    "#     del workbook['Duplicate PSID']\n",
+    "# workbook.save(file_path)  # Save after deleting to ensure it's applied\n",
+    "\n",
+    "# Append the new data to the workbook in 'Duplicate PSID'\n",
+    "# with pd.ExcelWriter(file_path, engine='openpyxl', mode='a') as writer:\n",
+    "#     duplicate_psid_df.to_excel(writer, sheet_name='Duplicate PSID', index=False)\n",
+    "print(duplicate_psid_df)\n",
+    "print(\"Duplicate PSID sheet with duplicate and correct PS ID rows has been created and saved.\")\n"
    ]
   },
   {
