--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "1aa5cc70",
    "metadata": {},
    "outputs": [
@@ -11,10 +11,9 @@
      "output_type": "stream",
      "text": [
       "  Billing Contact Name  Billing Contact PS ID  Correct Billing Contact PS ID\n",
-      "0                Alice                    101                            101\n",
       "1                Alice                    102                            101\n",
-      "2                Alice                    103                            101\n",
-      "Duplicate PSID sheet with duplicate and correct PS ID rows has been created and saved.\n"
+      "3                Alice                    103                            101\n",
+      "Filtered Duplicate PSID sheet with mismatched PS IDs has been created and saved.\n"
      ]
     }
    ],
@@ -23,9 +22,6 @@
     "from openpyxl import load_workbook\n",
     "\n",
     "# Sample data for spocdf and olddf (replace these with actual data loading as needed)\n",
-    "# spocdf contains the possibly duplicated Billing Contact data\n",
-    "# olddf contains the correct values for Billing Contact Name and PS ID\n",
-    "\n",
     "spocdf = pd.DataFrame({\n",
     "    'Billing Contact Name': ['Alice', 'Alice', 'Bob', 'Alice', 'Charlie', 'Charlie'],\n",
     "    'Billing Contact PS ID': [101, 102, 201, 103, 301, 301]\n",
@@ -36,40 +32,35 @@
     "    'Billing Contact PS ID': [101, 201, 301]  # Assuming these are the correct PS IDs\n",
     "})\n",
     "\n",
-    "# Step 1: Identify rows in spocdf where each Billing Contact Name has more than one unique PS ID\n",
-    "# Find unique counts of 'Billing Contact PS ID' per 'Billing Contact Name'\n",
-    "duplicate_check = spocdf.groupby('Billing Contact Name')['Billing Contact PS ID'].nunique()\n",
-    "duplicate_names = duplicate_check[duplicate_check > 1].index\n",
-    "\n",
-    "# Filter the spocdf for rows with duplicate Billing Contact Names\n",
-    "duplicate_psid_df = spocdf[spocdf['Billing Contact Name'].isin(duplicate_names)].copy()\n",
-    "\n",
-    "# Step 2: Add the correct 'Billing Contact PS ID' from olddf to duplicate_psid_df\n",
-    "# Merge with olddf to get the correct PS ID, assuming olddf has correct mappings\n",
-    "duplicate_psid_df = duplicate_psid_df.merge(\n",
-    "    olddf[['Billing Contact Name', 'Billing Contact PS ID']],\n",
+    "# Step 1: Merge spocdf with olddf to add the correct PS ID as a reference\n",
+    "merged_df = spocdf.merge(\n",
+    "    olddf,\n",
     "    on='Billing Contact Name',\n",
     "    how='left',\n",
     "    suffixes=('', '_correct')\n",
     ")\n",
     "\n",
-    "# Step 3: Rename the merged column to 'Correct Billing Contact PS ID'\n",
-    "duplicate_psid_df.rename(columns={'Billing Contact PS ID_correct': 'Correct Billing Contact PS ID'}, inplace=True)\n",
+    "# Step 2: Filter for rows where the 'Billing Contact PS ID' does not match the 'Correct Billing Contact PS ID'\n",
+    "# Retain only records where there is a mismatch\n",
+    "mismatched_psid_df = merged_df[merged_df['Billing Contact PS ID'] != merged_df['Billing Contact PS ID_correct']].copy()\n",
     "\n",
-    "# Step 4: Write the DataFrame to a new sheet in the same workbook\n",
+    "# Rename the correct column for clarity\n",
+    "mismatched_psid_df.rename(columns={'Billing Contact PS ID_correct': 'Correct Billing Contact PS ID'}, inplace=True)\n",
+    "\n",
+    "# # Step 3: Write the filtered DataFrame with mismatched PS IDs to a new sheet in the workbook\n",
     "# file_path = 'your_workbook.xlsx'  # Replace with your actual file path\n",
     "# workbook = load_workbook(file_path)\n",
     "\n",
-    "# Check if 'Duplicate PSID' sheet exists, and delete if it does\n",
+    "# # Check if 'Duplicate PSID' sheet exists, and delete if it does\n",
     "# if 'Duplicate PSID' in workbook.sheetnames:\n",
     "#     del workbook['Duplicate PSID']\n",
     "# workbook.save(file_path)  # Save after deleting to ensure it's applied\n",
     "\n",
-    "# Append the new data to the workbook in 'Duplicate PSID'\n",
+    "# # Append the new data to the workbook in 'Duplicate PSID'\n",
     "# with pd.ExcelWriter(file_path, engine='openpyxl', mode='a') as writer:\n",
-    "#     duplicate_psid_df.to_excel(writer, sheet_name='Duplicate PSID', index=False)\n",
-    "print(duplicate_psid_df)\n",
-    "print(\"Duplicate PSID sheet with duplicate and correct PS ID rows has been created and saved.\")\n"
+    "#     mismatched_psid_df.to_excel(writer, sheet_name='Duplicate PSID', index=False)\n",
+    "print(mismatched_psid_df)\n",
+    "print(\"Filtered Duplicate PSID sheet with mismatched PS IDs has been created and saved.\")\n"
    ]
   },
   {
