--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "# Function to track changes between the master_df and month-specific GHA and Open Positions files\n",
-    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, columns_to_check):\n",
+    "def track_changes(master_df, gha_mom, mom_open_pos, current_month, gha_columns_to_check, open_pos_columns_to_check):\n",
     "    \"\"\"\n",
     "    Tracks changes between master_df and month-specific files (GHA and Open Positions).\n",
     "\n",
@@ -19,99 +19,87 @@
     "    - gha_mom (DataFrame): The month-specific GHA data.\n",
     "    - mom_open_pos (DataFrame): The month-specific Open Positions data.\n",
     "    - current_month (str): The current month (e.g., 'Jan-24').\n",
-    "    - columns_to_check (list): List of column names to check for changes.\n",
+    "    - gha_columns_to_check (list): List of column names to check for changes in GHA files.\n",
+    "    - open_pos_columns_to_check (list): List of column names to check for changes in Open Positions files.\n",
     "\n",
     "    Returns:\n",
     "    - updated_master_df (DataFrame): The master DataFrame with changes and new records.\n",
     "    - updated_rows_df (DataFrame): DataFrame containing records with updates.\n",
     "    - changed_rows_df (DataFrame): DataFrame containing records with changed values.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Ensure the position ID and employee ID are consistent as strings for both dataframes\n",
+    "    # Ensure Position ID and Employee ID are consistent as strings\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
     "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
     "\n",
-    "    # Track new records and changed records\n",
+    "    # Track updated and changed rows\n",
     "    updated_rows = []\n",
     "    changed_rows = []\n",
     "\n",
-    "    # Check changes in GHA records\n",
+    "    # Process GHA records\n",
     "    for idx, row in gha_mom.iterrows():\n",
-    "        # Check if the Position ID and Employee ID match\n",
     "        match_in_master = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
-    "                                     (master_df['Employee ID'] == row['Employee ID'])]\n",
-    "\n",
+    "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
     "        if not match_in_master.empty:\n",
-    "            # If a match exists, check for attribute changes in the columns of interest\n",
     "            changes = []\n",
-    "            for col in columns_to_check:\n",
+    "            for col in gha_columns_to_check:\n",
     "                if row[col] != match_in_master.iloc[0][col]:\n",
     "                    changes.append(col)\n",
-    "\n",
-    "            # If any attribute has changed, log the change\n",
     "            if changes:\n",
     "                changed_row = row.copy()\n",
     "                changed_row['Description'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                changed_row['Month'] = current_month\n",
+    "                changed_row['Month Changed'] = current_month\n",
     "                changed_rows.append(changed_row)\n",
     "        else:\n",
-    "            # New record if no match exists in master\n",
     "            new_row = row.copy()\n",
     "            new_row['Description'] = 'New Record'\n",
-    "            new_row['Month'] = current_month\n",
+    "            new_row['Month Changed'] = current_month\n",
     "            updated_rows.append(new_row)\n",
     "\n",
-    "    # Check changes in Open Positions records (no Employee ID available)\n",
+    "    # Process Open Positions records\n",
     "    for idx, row in mom_open_pos.iterrows():\n",
-    "        # Check if the Position ID matches\n",
     "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
-    "\n",
     "        if not match_in_master.empty:\n",
-    "            # If a match exists, check for attribute changes (excluding Work Location City and Employee ID)\n",
     "            changes = []\n",
-    "            for col in columns_to_check:\n",
-    "                if col != 'Work Location City':  # Skip Work Location City\n",
-    "                    if row[col] != match_in_master.iloc[0][col]:\n",
-    "                        changes.append(col)\n",
-    "\n",
-    "            # If any attribute has changed, log the change\n",
+    "            for col in open_pos_columns_to_check:\n",
+    "                if row[col] != match_in_master.iloc[0][col]:\n",
+    "                    changes.append(col)\n",
     "            if changes:\n",
     "                changed_row = row.copy()\n",
     "                changed_row['Description'] = '; '.join([f\"{col} Changed\" for col in changes])\n",
-    "                changed_row['Month'] = current_month\n",
+    "                changed_row['Month Changed'] = current_month\n",
     "                changed_rows.append(changed_row)\n",
     "        else:\n",
-    "            # New record if no match exists in master\n",
     "            new_row = row.copy()\n",
     "            new_row['Description'] = 'New Record'\n",
-    "            new_row['Month'] = current_month\n",
+    "            new_row['Month Changed'] = current_month\n",
     "            updated_rows.append(new_row)\n",
     "\n",
     "    # Convert lists to DataFrames\n",
     "    updated_rows_df = pd.DataFrame(updated_rows)\n",
     "    changed_rows_df = pd.DataFrame(changed_rows)\n",
     "\n",
-    "    # Combine the new and changed records into the master_df\n",
+    "    # Combine new and changed records into master_df\n",
     "    updated_master_df = pd.concat([master_df, updated_rows_df, changed_rows_df], ignore_index=True)\n",
     "\n",
     "    return updated_master_df, updated_rows_df, changed_rows_df\n",
     "\n",
-    "# Example usage in a loop\n",
-    "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
-    "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
+    "# Example usage\n",
+    "gha_columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "open_pos_columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
-    "# Assume you already have `master_df`, `gha_mom`, and `mom_open_pos` loaded appropriately\n",
+    "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
     "for month in months:\n",
-    "    # Fetch GHA and Open Positions files for the specific month\n",
+    "    # Load month-specific files\n",
     "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')\n",
     "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')\n",
     "\n",
-    "    # Call the function to track changes\n",
-    "    master_df, updated_rows, changed_rows = track_changes(master_df, gha_mom, mom_open_pos, month, columns_to_check)\n",
+    "    # Call the function\n",
+    "    master_df, updated_rows, changed_rows = track_changes(\n",
+    "        master_df, gha_mom, mom_open_pos, month, gha_columns_to_check, open_pos_columns_to_check\n",
+    "    )\n",
     "\n",
-    "    # Display the result\n",
     "    print(f\"Updated records for {month}:\\n\", updated_rows)\n",
     "    print(f\"Changed records for {month}:\\n\", changed_rows)\n"
    ]
